# src/main/java/org/example/mikhaylovivan2semester/controller/UserController.java
@@ -1,12 +1,11 @@
 package org.example.mikhaylovivan2semester.controller;
 
 import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.Size;
 import lombok.extern.slf4j.Slf4j;
 import org.example.mikhaylovivan2semester.api.UserApiDocumentation;
 import org.example.mikhaylovivan2semester.dto.UserDTO;
-import org.example.mikhaylovivan2semester.entity.Request;
 import org.example.mikhaylovivan2semester.entity.Response;
+import org.example.mikhaylovivan2semester.entity.response.CreateUserRequest;
 import org.example.mikhaylovivan2semester.service.interfaces.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -39,13 +38,18 @@ public class UserController implements UserApiDocumentation {
 
   @Override
   @PostMapping
-  public ResponseEntity<Response<UserDTO>> save(@RequestBody Request<CreateUserRequest> userRequest) {
-    CreateUserRequest createUserRequest = userRequest.data();
-    log.info("Получен запрос на сохранение пользователя: {}", createUserRequest.name());
-    Optional<UserDTO> user = userService.save(createUserRequest.name(), createUserRequest.password());
+  public ResponseEntity<Response<UserDTO>> save(@RequestBody CreateUserRequest createUserRequest) {
+    if (createUserRequest == null) {
+      log.error("Не получен объект CreateUserRequest в запросе");
+      return ResponseEntity.badRequest().body(new Response<>(400, "Некорректные данные запроса"));
+    }
+
+    log.info("Получен запрос на сохранение пользователя: {}", createUserRequest.getName());
+    Optional<UserDTO> user = userService.save(createUserRequest.getName(), createUserRequest.getPassword());
     return user.map(value -> ResponseEntity.status(201).body(new Response<>(value)))
         .orElseGet(() -> ResponseEntity.badRequest().body(new Response<>(400, "Не удалось создать пользователя")));
   }
+
 
   @Override
   @GetMapping("/{userId}")
@@ -71,29 +75,5 @@ public class UserController implements UserApiDocumentation {
     log.info("Получен запрос на проверку существования пользователя с именем: {}", name);
     boolean exists = userService.exists(name);
     return ResponseEntity.ok(new Response<>(exists));
-  }
-
-  // Вспомогательный класс для сохранения данных пользователя
-  public static class CreateUserRequest {
-    @NotBlank
-    @Size(min = 3, max = 50)
-    private String name;
-
-    @NotBlank
-    @Size(min = 6)
-    private String password;
-
-    public CreateUserRequest(String name, String password) {
-      this.name = name;
-      this.password = password;
-    }
-
-    public String name() {
-      return name;
-    }
-
-    public String password() {
-      return password;
-    }
   }
 }
