# src/main/java/org/example/mikhaylovivan2semester/entity/response/CreateUserRequest.java
@@ -1,0 +1,21 @@
+package org.example.mikhaylovivan2semester.entity.response;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.Getter;
+
+@Getter
+public class CreateUserRequest {
+  @NotBlank
+  @Size(min = 3, max = 50)
+  private String name;
+
+  @NotBlank
+  @Size(min = 6)
+  private String password;
+
+  public CreateUserRequest(String name, String password) {
+    this.name = name;
+    this.password = password;
+  }
+}
